src/styles/main.scss
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");

$primary-color: #212226;
$secondary-color: #f4f4f4;
$box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);

* {
  box-sizing: border-box;
}

body {
  background-color: $primary-color;
  font-family: "Roboto", sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  overflow: hidden;
  margin: 2rem 16rem;
  padding: 20px;
  color: $secondary-color;
  gap: 1.2rem;
}

#searchBtn {
  background-image: url("../assets/searchIcon.svg");
  background-size: 16px 16px;
  background-repeat: no-repeat;
  background-position: center;
  min-width: 2rem;
  min-height: 2rem;
  font-size: 16px;
  border: 0;
  border-radius: 3px;
}

#search {
  max-width: 720px;
  min-width: 200px;
  min-height: 2rem;

  font-size: large;
}

#unitMeasure {
  min-height: 2rem;
  font-size: large;
}
form {
  display: flex;
}

header {
}

nav {
  display: flex;
  justify-content: center;
  align-items: center;
}

.display {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1.2rem;
}
@media (max-width: 768px) {
  .display {
    grid-template-columns: 1fr;
    gap: 1.2rem;
    overflow: scroll;
  }
}

.mainInfoDiv {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.mainInfoCard {
  display: flex;
}

.sideInfoDiv {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.showWeekForecast {
  width: 100%;
  min-width: 2rem;
  min-height: 2rem;
  max-height: 2rem;
  font-size: large;
  font-weight: bold;
}

.moreInfo {
  display: flex;
  gap: 2rem;
}

.moreInfoContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.2rem;
}

.moreInfoTitle {
  font-size: 13px;
  opacity: 0.8;
}

.moreInfoValue {
  font-size: 2rem;
}

.sunCard {
  display: flex;
  flex-direction: column;
  min-height: 2rem;
  justify-content: center;
  padding: 0.3rem;
  background: linear-gradient(
    to right,
    hsl(60, 100%, 83%),
    hsl(45, 100%, 70%),
    hsl(30, 100%, 60%)
  );
  border-radius: 9px;
  opacity: 0.6;
}

.sunIconContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  padding: 0.3rem;
  font-weight: 500;
}

.sunInfo {
  display: flex;
  justify-content: space-between;
  color: black;
  font-size: 1.2rem;
}

.windInfo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.3rem;
}

.windInfo > * {
  font-size: 2rem;
}

.windInfo > div > div > img {
  min-width: 1.8rem;
  min-height: 1.8rem;
  min-width: 2rem;
  min-height: 2rem;
}

.windIconContainer {
  display: flex;
  gap: 0.2rem;
}

.hourWindSpeed {
  font-weight: bold;
  font-size: 12px;
  display: flex;
}

.windIconContainer img {
  min-width: 8px;
  min-height: 8px;
  max-width: 16px;
  max-height: 16px;
}

.windSnowContainer {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
// .mainInfoDiv {
//   overflow: hidden;
// }
.nextHoursCardContainer {
  flex: 1;
}

.nextHoursCardContainer > .div {
  font-size: 1.5rem;
}
// .swiper {
//   max-width: 300px;
// }

.swiper-wrapper {
  max-width: 300px;
  display: flex;
  overflow: scroll;
  gap: 0.3rem;
  padding: 1rem;
}

.nextHoursCardContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.hourCard {
  padding: 0.4rem;
  width: 8rem;
  max-height: 300px;
  min-width: 90px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.6rem;

  background-color: #515151;
  border-radius: 16px;
  // flex-wrap: wrap;
}

.hourCard > .windIconContainer {
  justify-content: center;
  align-items: center;
  gap: 0.1rem;
}

.hourCard *img {
  min-width: 8px;
  min-height: 8px;
  max-width: 12px;
  max-height: 12px;
}

.iconContainer img {
  min-width: 30px;
  min-height: 30px;
  max-height: 40px;
  max-width: 40px;
}

.snowCard > .moreInfo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.3rem;
}

.snowCard > .moreInfoContainer > .moreInfoTitle {
  font-size: 13px;
}
.snowCard > .moreInfoContainer > .moreInfoValue {
  font-size: 2rem;
}

// .hourCard img {
//   // min-width: 30px;
//   // min-height: 30px;
//   // max-width: 50px;
//   // max-height: 50px;
// }

.flex-group {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.uiContainer .temp {
  font-size: 5rem;
}

.conditions {
  margin-bottom: 0.3rem;
}

.windDirection {
  width: 30px;
  height: 30px;
  // transform: rotate(90deg);
}

.close {
  font-size: 2rem;
  cursor: pointer;
}

.daysContainer {
  display: flex;
  gap: 0.3rem;
}
.dayCard {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: self-start;
  padding: 0.5rem;
  gap: 0.3rem;

  background-color: #515151;
  border-radius: 16px;
  // box-shadow: ;

  color: $secondary-color;
}
button {
  cursor: pointer;
}
.dayCard > :nth-child(-n + 3) {
  margin-left: auto;
  margin-right: auto;
  align-items: center;
}

.showWeekForecast {
  background-color: #212226;
  color: #f4f4f4;
  outline: none;
  border: white solid 1px;
  border-radius: 9px;
  // padding: 0.3rem;
}
.showWeekForecast:hover {
  color: #212226;
  background-color: #f4f4f4;
  border: black solid 2px;
  // border-radius: 9px;
  // padding: 0.3rem;
}

.close,
.modalCity {
  margin-bottom: 1rem;
  color: $secondary-color;
}
.close:hover {
  color: black;
}
.modalCity {
  margin-top: 1rem;
  font-size: 1.5rem;
  font-weight: bold;
}

.daysContainer,
.modalCity {
  display: flex;
}

.close {
  position: absolute;
  top: 10px;
  right: 10px;
}

dialog {
  background-color: rgb(41, 40, 40);
  position: relative;
}

.btn {
  background-color: $primary-color;
  color: $secondary-color;
  border: 0;
  border-radius: 10px;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
  padding: 14px 40px;
  font-size: 16px;
  cursor: pointer;

  &:active {
    transform: scale(0.98);
  }

  &:focus {
    outline: 0;
  }
}

